# lcfit

./: .gitignore  .gitmodules  .syntastic_cpp_config  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  gsl_test.c  lcfit.c  lcfit.h  mainpage.dox  plot_fits.R  quintic_C.c  quintic_C.h  test.c  test_quintic_C.c
data/: test.params.bpp  test.tre
example/: .gitignore  Makefile  plot_example.R  plot_fits.R  test.params.bpp
examples/tree006/: README.md
examples/tree006/JC/: alignment.fasta  bppml.bpp  control.json  lcfit_bls.csv  lcfit_fit.csv  lcfit_log.csv  lcfit_maxima.csv  ml_tree.infos  ml_tree.params.txt  ml_tree.tre  model.bpp  seqgen.bpp
examples/tree006/MG94-2.0/: alignment.fasta  bppml.bpp  control.json  lcfit_bls.csv  lcfit_fit.csv  lcfit_log.csv  lcfit_maxima.csv  ll_curves.R  ml_tree.infos  ml_tree.params.txt  ml_tree.tre  model.bpp  seqgen.bpp
examples/tree006/WAG01/: alignment.fasta  bppml.bpp  control.json  lcfit_bls.csv  lcfit_fit.csv  lcfit_log.csv  lcfit_maxima.csv  ml_tree.infos  ml_tree.params.txt  ml_tree.tre  model.bpp  plot.R  seqgen.bpp
examples/tree006/nonhomogeneous/: README.md  alignment.fasta  bppml.bpp  control.json  lcfit_bls.csv  lcfit_fit.csv  lcfit_log.csv  lcfit_maxima.csv  ml_tree.infos  ml_tree.params.txt  ml_tree.tre  model.bpp  seqgen.bpp
lcfit2_sims/: .gitignore  README.md  SConstruct  env.sh
lcfit_R/: DESCRIPTION  NAMESPACE  configure  configure.ac  test.R
lcfit_R/R/: RcppExports.R
lcfit_R/man/: lcfit_R-package.Rd
lcfit_R/src/: Makevars  Makevars.in  RcppExports.cpp  lcfit.c  lcfit.h  lcfit_rcpp.cpp  lcfit_rejection_sampler.cc  lcfit_rejection_sampler.h  lcfit_select.c  lcfit_select.h
lcfit_cpp_src/: CMakeLists.txt  gsl.cc  gsl.h  lcfit2_compare.cc  lcfit_bakeoff.cc  lcfit_compare.cc  lcfit_cpp.cc  lcfit_cpp.h  lcfit_rejection_sampler.cc  lcfit_rejection_sampler.h  test_lcfit.cc  test_lcfit2.cc  test_lcfit_cpp.cc
lcfit_src/: CMakeLists.txt  lcfit.c  lcfit.h  lcfit2.c  lcfit2.h  lcfit2_gsl.c  lcfit2_gsl.h  lcfit2_nlopt.c  lcfit2_nlopt.h  lcfit3.c  lcfit3.h  lcfit3_nlopt.c  lcfit3_nlopt.h  lcfit_priv.h  lcfit_select.c  lcfit_select.h  sampling.c
lcfittex/: SConstruct  lcfittex.tex
nlopt-2.4.1/: CMakeLists.txt
phyml-src/src/: config.h  free.c  lk.h  main.c  optimiz.c  utilities.c  utilities.h
phyml_src/src/: lk.c  optimiz.c
sims/: .gitignore  R-packages.txt  README.md  SConstruct  aggregate.R  aggregate.sh  distributions.Rmd  env.sh  gen_trees.R  performance.Rmd  requirements.txt  tidy_data.R
sims/analysis/: Makefile  README.md  aggfit.Rmd  aggutils.R  fitting.Rmd  utils.R
sims/analysis/shiny/: server.r  test.R  ui.r
sims/trees/: tree0001.tre  tree0002.tre  tree0003.tre  tree0004.tre  tree0005.tre  tree0006.tre  tree0007.tre  tree0008.tre  tree0009.tre  tree0010.tre
src/: compare.cc  gsl.cc  gsl.h  lcfit.c  lcfit.h  lcfit_cpp.cc  lcfit_cpp.h  lcfit_select.c  lcfit_select.h
symbolic_algebra/: erick_taylor.nb  erick_taylor.txt  likelihood.wxm
test/: CMakeLists.txt  all_seq.phy  check_basic.c  test_kl.r  test_lcfit.cc  test_lcfit.py  test_lcfit3.cc  test_lcfit_cpp.cc
tex/: .sconsign.dblite  SConstruct  lcfit.tex
theory/: lcfit2-cmv-constraint.sagews  lcfit2n-cm-gradient.sagews
